--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,8 @@
 // Home Content
 
 .home {
-
+padding-top:10%;
+@media @phone {padding-top:15%;}
   .intro {
 
     h2 {
