--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,6 +4,9 @@
     flex-direction: column;
     justify-content: center;
     padding:1%;
+    position:fixed;
+    background-color:rgba(0, 0, 255, 0.3);
+    width:100%;
     .navbar{
         .flex();
         justify-content: space-around;
